# adventofcode2020

./: CMakeLists.txt  README.md
data/01/: Instructions.md
data/19/: Regex.txt  Rules.txt  ValidResultsTask2.txt
data/22/: input3.txt
include/: Helper.cuh  Timer.cuh
src/: main01.cpp  main01.cu  main02.cpp  main03.cpp  main04.cpp  main05.cpp  main06.cpp  main07.cpp  main08.cpp  main09.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cu  main14.cpp  main15.cpp  main16.cpp  main17.cpp  main18.cpp  main19.cpp  main20.cpp  main21.cpp  main22.cpp  main23.cpp  main24.cpp  main25.cpp
